--- a/playbook/roles/nginx/tasks/ssl.yml
+++ b/playbook/roles/nginx/tasks/ssl.yml
@@ -10,14 +10,14 @@
 
 - name: Commmon | Upload SSL private key.
   when: not $project.is_local
-  copy: src=files/ssl/${project.name}-private-key.pem dest=${project.root}ssl/${project.name}-private-key.pem
+  copy: src=lookup('file', webserver.ssl_private) dest=${project.root}ssl/${project.name}-private-key.pem
   tags:
     - configuration
     - ssl
 
 - name: Commmon | Upload SSL public key.
   when: not $project.is_local
-  copy: src=files/ssl/${project.name}-cert.pem dest=${project.root}ssl/${project.name}-cert.pem
+  copy: src=lookup('file', webserver.ssl_public) dest=${project.root}ssl/${project.name}-cert.pem
   tags:
     - configuration
     - ssl
