--- a/playbook/roles/django/tasks/django.yml
+++ b/playbook/roles/django/tasks/django.yml
@@ -1,6 +1,5 @@
 ---
 - name: Django |  Create Django Database Settings Module
-  when: not project.is_local
   template: >
     src=db.py.j2
     dest=${django.root}/base/settings/modules/db.py
@@ -50,7 +49,17 @@
   notify:
     - restart uwsgi
 
-- name: Django |  Collate application assets.
+- name: Django | Compress Assets
+  when: project.mode == 'live'
+  shell: command=". ${django.virtualenv}/bin/activate; cd ${django.root}; python ./manage.py compress --settings=${django.settings} --force"
+  tags:
+    - assets
+    - collectstatic
+    - update
+    - application
+    - django
+
+- name: Django | Collate application assets.
   when: project.mode == 'live'
   django_manage: >
     command=collectstatic
