--- a/playbook/roles/uwsgi/tasks/main.yml
+++ b/playbook/roles/uwsgi/tasks/main.yml
@@ -1,5 +1,18 @@
 ---
-- name: Uwsgi | Create uwsgi application placeholder.
+- name: uWsgi | Ensure configuration directories exist
+  file: >
+    group=root
+    owner=root
+    mode=755
+    path=$item
+    state=directory
+  with_items:
+    - /etc/uwsgi/apps-available
+    - /etc/uwsgi/apps-enabled
+  tags:
+    - base
+
+- name: uWsgi | Create uwsgi application placeholder.
   notify: restart uwsgi
   command: touch /etc/uwsgi/apps-available/${project.name}.ini
   tags:
@@ -7,7 +20,7 @@
     - uwsgi
     - appserver
 
-- name: Uwsgi | Enable uWsgi application.
+- name: uWsgi | Enable uWsgi application.
   notify: restart uwsgi
   command: ln -s /etc/uwsgi/apps-available/${project.name}.ini /etc/uwsgi/apps-enabled/${project.name}.ini creates=/etc/uwsgi/apps-enabled/${project.name}.ini
   tags:
@@ -15,9 +28,10 @@
     - uwsgi
     - appserver
 
-- name: Uwsgi | Install uwsgi configuration file.
-  when: not project.is_local
-  template: src=uwsgi.ini.j2 dest=/etc/uwsgi/apps-available/${project.name}.ini
+- name: uWsgi | Install uwsgi configuration file.
+  template: >
+    src=uwsgi.ini.j2
+    dest=/etc/uwsgi/apps-available/${project.name}.ini
   notify: restart uwsgi
   tags:
     - configuration
