--- a/playbook/roles/django/tasks/pip.yml
+++ b/playbook/roles/django/tasks/pip.yml
@@ -5,8 +5,8 @@
     requirements=$item
     virtualenv=${django.virtualenv}
   with_items:
-    - ${project.root}/code/requirements/base.list
-    - ${project.root}/code/requirements/${project.mode}.list
+    - ${project.root}code/requirements/base.list
+    - ${project.root}code/requirements/${project.mode}.list
   tags:
     - packages
     - application
