--- a/playbook/roles/postgres/handlers/main.yml
+++ b/playbook/roles/postgres/handlers/main.yml
@@ -1,4 +1,8 @@
 ---
-- name: restart postgresql
+- name: reload postgresql
   service: name=postgresql state=reloaded
+  sudo_user: root
+
+- name: restart postgresql
+  service: name=postgresql state=restart
   sudo_user: root
