--- a/playbook/site.yml
+++ b/playbook/site.yml
@@ -1,5 +1,6 @@
 ---
 # file: site.yml
 - include: dbservers.yml
+- include: cacheservers.yml
 - include: appservers.yml
 - include: loadbalancers.yml
