Move apt-get installment of packages into their respective roles

--- a/playbook/roles/django/tasks/common.yml
+++ b/playbook/roles/django/tasks/common.yml
@@ -1,4 +1,16 @@
 ---
+- name: Django | Create Project root directory.
+  file: >
+    state=directory
+    path=${project.root}
+    group=www-data
+    owner=www-data
+    mode=755
+    state=directory
+  tags:
+    - base
+    - provision
+
 - name: Users | Create user.
   user: >
     home=${project.root}/home
