--- a/playbook/roles/uwsgi/tasks/main.yml
+++ b/playbook/roles/uwsgi/tasks/main.yml
@@ -1,40 +1,4 @@
 ---
-- name: uWsgi | Ensure configuration directories exist
-  file: >
-    group=root
-    owner=root
-    mode=755
-    path=$item
-    state=directory
-  with_items:
-    - /etc/uwsgi/apps-available
-    - /etc/uwsgi/apps-enabled
-  tags:
-    - base
+- include: packages.yml
+- include: app.yml
 
-- name: uWsgi | Create uwsgi application placeholder.
-  notify: restart uwsgi
-  command: touch /etc/uwsgi/apps-available/${project.name}.ini
-  tags:
-    - configuration
-    - uwsgi
-    - appserver
-
-- name: uWsgi | Enable uWsgi application.
-  notify: restart uwsgi
-  command: ln -s /etc/uwsgi/apps-available/${project.name}.ini /etc/uwsgi/apps-enabled/${project.name}.ini creates=/etc/uwsgi/apps-enabled/${project.name}.ini
-  tags:
-    - configuration
-    - uwsgi
-    - appserver
-
-- name: uWsgi | Install uwsgi configuration file.
-  template: >
-    src=uwsgi.ini.j2
-    dest=/etc/uwsgi/apps-available/${project.name}.ini
-  notify: restart uwsgi
-  tags:
-    - configuration
-    - uwsgi
-    - appserver
-    - update
