--- a/playbook/roles/django/tasks/main.yml
+++ b/playbook/roles/django/tasks/main.yml
@@ -1,5 +1,9 @@
 ---
+- include: common.yml
+- include: packages.yml
 - include: ssh.yml
 - include: git.yml
 - include: pip.yml
-- include: django.yml
+- include: settings.yml
+- include: database.yml
+- include: assets.yml
