--- a/playbook/roles/postgres/handlers/main.yml
+++ b/playbook/roles/postgres/handlers/main.yml
@@ -4,5 +4,5 @@
   sudo_user: root
 
 - name: restart postgresql
-  service: name=postgresql state=restart
+  service: name=postgresql state=restarted
   sudo_user: root
