--- a/playbook/roles/django/tasks/assets.yml
+++ b/playbook/roles/django/tasks/assets.yml
@@ -1,6 +1,6 @@
 ---
-- name: Django | Compress Assets
-  shell: command=". ${django.virtualenv}/bin/activate; cd ${django.root}; python ./manage.py compress --settings=${django.settings} --force"
+- name: Django | Assets | Compress
+  shell: command=". ${project.virtualenv}/bin/activate; cd ${django.root}; python ./manage.py compress --settings=${django.settings} --force"
   tags:
     - assets
     - collectstatic
@@ -8,13 +8,13 @@
     - application
     - django
 
-- name: Django | Collate application assets.
+- name: Django | Assets | Collect
   django_manage: >
     command=collectstatic
     link=yes
     app_path=${django.root}
     settings=${django.settings}
-    virtualenv=${django.virtualenv}
+    virtualenv=${project.virtualenv}
   tags:
     - assets
     - collectstatic
