--- a/playbook/roles/django/tasks/settings.yml
+++ b/playbook/roles/django/tasks/settings.yml
@@ -1,5 +1,5 @@
 ---
-- name: Django |  Create Django Database Settings Module
+- name: Django | Settings | Create Django Database Settings Module
   template: >
     src=db.py.j2
     dest=${django.root}/base/settings/modules/db.py
@@ -10,7 +10,7 @@
     - configuration
     - update
 
-- name: Django |  Create Django Cache Settings Module
+- name: Django | Settings | Create Django Cache Settings Module
   template: >
     src=cache.py.j2
     dest=${django.root}/base/settings/modules/cache.py
@@ -20,5 +20,17 @@
     - django
     - configuration
     - update
+
+- name: Django | Settings | Create Django Celery Settings Module
+  template: >
+    src=celery.py.j2
+    dest=${django.root}/base/settings/modules/celery.py
+  tags:
+    - cache
+    - application
+    - django
+    - configuration
+    - update
+
 
 
