--- a/playbook/roles/uwsgi/handlers/main.yml
+++ b/playbook/roles/uwsgi/handlers/main.yml
@@ -1,8 +1,12 @@
 ---
 - name: restart uwsgi
-  service: name=uwsgi state=restarted
   sudo_user: root
+  service: >
+    name=uwsgi-${project.name}
+    state=restarted
 
 - name: reload uwsgi
-  service: name=uwsgi state=reloaded
   sudo_user: root
+  service: >
+    name=uwsgi-${project.name}
+    state=restarted
