Update celery tasks, they need to actually use upstart

--- a/playbook/roles/celery/handlers/main.yml
+++ b/playbook/roles/celery/handlers/main.yml
@@ -1,4 +1,14 @@
 ---
-- name: restart supervisor
-  service: name=supervisor state=restarted
+- name: restart celery
+  service: name={{project.name}}_celery state={{item}}
+  with_items:
+    - stopped
+    - started
+  sudo_user: root
+
+- name: restart celerybeat
+  service: name={{project.name}}_celerybeat state={{item}}
+  with_items:
+    - stopped
+    - started
   sudo_user: root
