--- a/playbook/roles/celery/tasks/main.yml
+++ b/playbook/roles/celery/tasks/main.yml
@@ -1,18 +1,18 @@
 ---
-- name: Celery | Install CeleryD supervisor task
+- name: Celery | Install Celery upstart jobs
   template: >
     src=upstart.celeryd.conf.j2
-    dest=/etc/supervisor/conf.d/${project.name}_celeryd.conf
+    dest=/etc/init/{{project.name}}_celeryd.conf
   notify:
-    - restart supervisor
+    - restart celery
   tags:
     - celery
 
-- name: Celery | Install CeleryBeat supervisor task
+- name: Celery | Install CeleryBeat upstart jobs
   template: >
-    src=celerybeat.ini.j2
-    dest=/etc/supervisor/conf.d/${project.name}_celerybeat.conf
+    src=upstart.celerybeat.conf.j2
+    dest=/etc/init/{{project.name}}_celerybeat.conf
   notify:
-    - restart supervisor
+    - restart celerybeat
   tags:
     - celery
