added host comparison checking, if either of the cacheserver, dbserver, messagequeue server is the same as the app server then we use 'localhost'

--- a/playbook/roles/postgres/tasks/access.yml
+++ b/playbook/roles/postgres/tasks/access.yml
@@ -13,4 +13,5 @@
     regexp="${database.name}.*${item}"
     line="host    ${database.name}             all             {{item}}/32       trust"
   with_items: groups.get('appservers')
+  when: single_server is not defined
   notify: restart postgresql
