--- a/playbook/roles/nginx/tasks/logging.yml
+++ b/playbook/roles/nginx/tasks/logging.yml
@@ -1,5 +1,5 @@
 ---
-- name: uWsgi | Create log directory
+- name: Nginx | Create log directory
   file: >
     dest=${project.root}logs/
     state=directory
