--- a/playbook/queueservers.yml
+++ b/playbook/queueservers.yml
@@ -1,5 +1,5 @@
 ---
-# file: dbservers.yml
+# file: queueservers.yml
 - name: Configure all MessageQueue servers
   hosts: queueservers
   sudo: yes
