--- a/playbook/loadbalancers.yml
+++ b/playbook/loadbalancers.yml
@@ -1,11 +1,10 @@
 ---
-# file: webservers.yml
+# file: loabbalancers.yml
 - name: Gather data about appservers
   hosts:  appservers
   gather_facts: yes
   tasks:
-    - name: setup
-      shell: ifconfig
+    - debug: Gather Facts
 
 - name: Configure all frontend loadbalancers
   hosts: loadbalancers
