--- a/playbook/roles/django/tasks/git.yml
+++ b/playbook/roles/django/tasks/git.yml
@@ -4,8 +4,8 @@
 #     state=directory
 #     path=${project.root}/code/
 #     owner=${project.user}
-#     group=${project.user}
 #     mode=0775
+#     group=${project.user}
 #   tags:
 #     - base
 #     - ssh
@@ -13,11 +13,10 @@
 #     - provision
 
 - name: Django | Git | Pull sources from the repository.
-  sudo: yes
   sudo_user: ${project.user}
   git: >
     repo=${repo.url}
-    dest=${project.root}/code
+    dest=${project.root}/code/
     version=${repo.branch}
     force=yes
     update=yes
