--- a/playbook/roles/postgres/tasks/access.yml
+++ b/playbook/roles/postgres/tasks/access.yml
@@ -1,5 +1,6 @@
 ---
 - name: Listen on public interface
+  when: not 'appservers' in group_names
   lineinfile: >
     dest=/etc/postgresql/9.1/main/postgresql.conf
     regexp="^listen_addresses"
@@ -8,10 +9,10 @@
   notify: restart postgresql
 
 - name: allow access to appservers
+  when: not 'appservers' in group_names
   lineinfile: >
     dest=/etc/postgresql/9.1/main/pg_hba.conf
-    regexp="${database.name}.*${item}"
-    line="host    ${database.name}             all             {{item}}/32       trust"
+    regexp="host ${database.name} ${database.user} ${item}\/32 trust"
+    line="host ${database.name} ${database.user} ${item}\/32 trust"
   with_items: groups.get('appservers')
-  when: single_server is not defined
   notify: restart postgresql
