--- a/playbook/roles/postgres/tasks/database.yml
+++ b/playbook/roles/postgres/tasks/database.yml
@@ -1,5 +1,6 @@
 ---
 - name: Create Database User
+  sudo: True
   sudo_user: postgres
   postgresql_user: >
     user=${database.user}
@@ -8,7 +9,9 @@
   tags: database
 
 - name: Create Database.
+  sudo: True
   sudo_user: postgres
+  # when: master # todo: figure out how master/slave setup works.
   postgresql_db: >
     name=${database.name}
     owner=${database.user}
