--- a/playbook/roles/postgres/tasks/database.yml
+++ b/playbook/roles/postgres/tasks/database.yml
@@ -5,8 +5,8 @@
 
 - name: Create Database User
   postgresql_user: >
-    name=${database.name}
-    user=${database.user}
+    db=${database.name}
+    name=${database.user}
     password=${database.password}
     role_attr_flags=CREATEDB,NOSUPERUSER
   tags: database
