--- a/playbook/roles/django/tasks/git.yml
+++ b/playbook/roles/django/tasks/git.yml
@@ -1,22 +1,9 @@
 ---
-# - name: Django | Git | Create target directory.
-#   file: >
-#     state=directory
-#     path=${project.root}/code/
-#     owner=${project.user}
-#     mode=0775
-#     group=${project.user}
-#   tags:
-#     - base
-#     - ssh
-#     - accounts
-#     - provision
-
 - name: Django | Git | Pull sources from the repository.
   sudo_user: ${project.user}
   git: >
     repo=${repo.url}
-    dest=${project.root}/code/
+    dest=${project.root}code/
     version=${repo.branch}
     force=yes
     update=yes
