--- a/playbook/roles/django/tasks/pip.yml
+++ b/playbook/roles/django/tasks/pip.yml
@@ -4,9 +4,7 @@
   pip: >
     requirements=$item
     virtualenv=${project.virtualenv}
-  with_items:
-    - ${project.root}code/requirements/base.list
-    - ${project.root}code/requirements/${project.mode}.list
+  with_items: ${project.requirements}
   tags:
     - packages
     - application
