--- a/playbook/roles/django/tasks/settings.yml
+++ b/playbook/roles/django/tasks/settings.yml
@@ -1,8 +1,9 @@
 ---
 - name: Django | Settings | Create Django Database Settings Module
+  sudo_user: ${project.user}
   template: >
     src=db.py.j2
-    dest=${django.root}/base/settings/modules/db.py
+    dest=${django.root}base/settings/modules/db.py
   tags:
     - database
     - application
@@ -11,9 +12,11 @@
     - update
 
 - name: Django | Settings | Create Django Cache Settings Module
+  when: cache is defined
+  sudo_user: ${project.user}
   template: >
     src=cache.py.j2
-    dest=${django.root}/base/settings/modules/cache.py
+    dest=${django.root}base/settings/modules/cache.py
   tags:
     - cache
     - application
@@ -22,9 +25,11 @@
     - update
 
 - name: Django | Settings | Create Django Celery Settings Module
+  when: message_queue is defined
+  sudo_user: ${project.user}
   template: >
     src=celery.py.j2
-    dest=${django.root}/base/settings/modules/celery.py
+    dest=${django.root}base/settings/modules/celery.py
   tags:
     - cache
     - application
