--- a/playbook/roles/nagios/tasks/main.yml
+++ b/playbook/roles/nagios/tasks/main.yml
@@ -15,22 +15,31 @@
    - nagios-devel
 
 - name: create nagios config dir
-  file: path=/etc/nagios/ansible-managed state=directory
+  file: >
+    state=directory
+    path=/etc/nagios/ansible-managed
 
 - name: configure nagios
-  copy: src=nagios.cfg dest=/etc/nagios/nagios.cfg
+  copy: >
+    src=nagios.cfg
+    dest=/etc/nagios/nagios.cfg
   notify: restart nagios
 
 - name: configure localhost monitoring
-  copy: src=localhost.cfg dest=/etc/nagios/objects/localhost.cfg
+  copy: >
+    src=localhost.cfg
+    dest=/etc/nagios/objects/localhost.cfg
   notify: restart nagios
 
 - name: configure nagios services
-  copy: src=ansible-managed-services.cfg dest=/etc/nagios/
+  copy: >
+    src=ansible-managed-services.cfg
+    dest=/etc/nagios/
 
 - name: create the nagios object files
-  template: src={{ item + ".j2" }}
-            dest=/etc/nagios/ansible-managed/{{ item }}
+  template: >
+    src={{ item + ".j2" }}
+    dest=/etc/nagios/ansible-managed/{{ item }}
   with_items:
     - webservers.cfg
     - dbservers.cfg
@@ -38,4 +47,7 @@
   notify: restart nagios
 
 - name: start nagios
-  service: name=nagios state=started enabled=yes
+  service: >
+    name=nagios
+    state=started
+    enabled=yes
