--- a/playbook/roles/uwsgi/tasks/packages.yml
+++ b/playbook/roles/uwsgi/tasks/packages.yml
@@ -1,5 +1,7 @@
 ---
 - name: uWsgi | (apt) Install required system packages.
+  sudo: yes
+  sudo_user: root
   apt: >
     pkg=${item}
     state=installed
@@ -16,8 +18,9 @@
     - provision
 
 - name: uWsgi | (pip) Install required system packages.
-  pip: name=$item
   sudo: yes
+  sudo_user: root
+  pip: name=$item
   with_items:
     - virtualenv
     - uwsgi
