--- a/playbook/site.yml
+++ b/playbook/site.yml
@@ -1,6 +1,7 @@
 ---
 # file: site.yml
 - include: dbservers.yml
+- include: queueservers.yml
 - include: cacheservers.yml
 - include: appservers.yml
 - include: loadbalancers.yml
