--- a/playbook/roles/nginx/tasks/certificates.yml
+++ b/playbook/roles/nginx/tasks/certificates.yml
@@ -9,16 +9,16 @@
 
 - name: Commmon | Upload SSL private key.
   copy: >
-    src=${webserver.ssl_private}
-    dest=/etc/nginx/ssl/${project.name}-private-key.pem
+    src=${nginx.ssl.private}
+    dest=/etc/nginx/ssl/${project.name}-private
   tags:
     - configuration
     - ssl
 
 - name: Commmon | Upload SSL public key.
   copy: >
-    src=${webserver.ssl_public}
-    dest=/etc/nginx/ssl/${project.name}-cert.pem
+    src=${nginx.ssl.public}
+    dest=/etc/nginx/ssl/${project.name}-public
   tags:
     - configuration
     - ssl
